# pyStag

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pyStag.cpp  setup.py  test_warpper.py
pyStag.egg-info/: PKG-INFO  SOURCES.txt
pybindSrc/: pyStag.cpp
pybindSrc/opencv2numpy/: converter.cpp  converter.h
src/: Drawer.cpp  Marker.h  Quad.h  Stag.cpp  Stag.h
src/ED/: ED.cpp  EDLines.cpp  Timer.h  Utilities.cpp  Utilities.h
